# Peptriever

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
doc/img/: curves.json
peptriever/: acceleration.py  concurrency.py  metrics.py  pdb_seq_lookup.py  reproducibility.py  tensorboard_writer.py
peptriever/data_sources/: Readme.md  local_pdb.py  propedia.py  protein_transformations.py
peptriever/data_sources/binding/: Readme.md  binding_pdb.py  binding_test_set.py  config.py  data_models.py  dataset_readme.md  download_binding_data.sh  huang.py  prepare_binding_training_set.py  publish.py  train_partitioner.py  yapp.py
peptriever/data_sources/pdb_sequences/: Readme.md  config.py  download_pdb_dump.sh  extract_pdb_sequences.py  publish.py
peptriever/finetuning/: Readme.md  binding_dataset.py  config.py  evaluate_peptriever.py  finetuning.py  loss.py  lr_scheduler.py  peptriever_trainiing_session.py  run_finetuning.py  session_metrics.py
peptriever/indexing/: Readme.md  build_and_publish.py  build_and_publish_annoy.py  build_and_publish_milvus.py  config.py  index_builder.py  indexing_dataset.py  knn_index.py  milvus_index_builder.py  publish_biencoder.py  publish_pdb_index.py  sequence_collator.py
peptriever/indexing/templates/: biencoder_card_template.md
peptriever/model/: Readme.md  bert_embedding.py  bi_encoder.py  peptriever.py
peptriever/pretraining/: Readme.md  build_bpe_tokenizer.py  build_tokenizer.py  config.py  load_tokenizer.py  mlm_dataset.py  mlm_pretraining.py  publish_tokenizer.py
peptriever/pretraining/templates/: tokenizer_card_template.md
peptriever/test/: test_loss.py
