[tool.poetry]
name = "peptriever"
version = "0.1.0"
description = ""
authors = ["Roni Gurvich <roni.gurvich@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
tqdm = "^4.65.0"
pandas = "^2.0.2"
biopython = "^1.81"
huggingface-hub = "^0.15.1"
transformers = "^4.30.2"
datasets = "^2.13.0"
jinja2 = "^3.1.2"
torch = "^2.0.1"
torchinfo = "^1.8.0"
matplotlib = "^3.7.1"
scikit-learn = "^1.2.2"
tensorboard = "^2.13.0"
annoy = "^1.17.3"
typer = "^0.9.0"
accelerate = "^0.20.3"
pymilvus = "^2.2.12"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.3.2"
mypy = "^1.3.0"
vulture = "^2.7"
ruff = "^0.0.272"
ipython = "^8.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
